2007-04-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpfile/file.py (File, File.__init__,
	  File.render, File.terminateSimpleRequest, File.renderAuthenticated,
	  File.createSimilarFile):
	  Comment and document.
	  Remove bogus pychecker inhibition.
	  Privatize File._component.
	  Instead of commenting badly named variables, use self-documenting
	  names.
	  Be a bit more strict about range headers we accept.
	  Make the start/end logic shorter and easier to grok by adding
	  first/last variables and simplifying.
	* flumotion/test/test_misc_httpfile.py
	  (TestTextFile.testWrongEmptyBytesRange,
	  TestTextFile.testWrongNoRange, TestTextFile.testWrongTypeRange,
	  TestTextFile.testRangeSet):
	  Add two tests, fix one.

2007-04-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_misc_httpfile.py:
	  Add a test before refactoring.
	  Increases coverage for file.py from 19% to 79%.

2007-04-24  Andy Wingo  <wingo@pobox.com>

	* flumotion/worker/feedserver.py (FeedServer.listen): Use a normal
	portal, now that we can, with the modifications below.

	* flumotion/worker/worker.py (ProxyBouncer): Move here from
	feedserver.ManagerProxyBouncer, and pass to the feedserver on
	creation. No need to qual() the classes, they are already qual()'d
	remotely.

	* flumotion/twisted/portal.py (BouncerPortal.getKeycardClasses):
	Add some API behavior: if the bouncer has a 'getKeycardClasses'
	attribute, call it instead of accessing the keycardClasses
	attribute.

	* flumotion/test/test_worker_feed.py (countOpenFileDescriptors):
	Interesting function!
	(TestFeedServer.testConnectWithoutDroppingPB): Add test, asserting
	on the number of open file descriptors at opportune times.

2007-04-24  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/producers/ivtv/ivtv.py
	  (Ivtv.get_pipeline_string):
	* flumotion/component/producers/ivtv/ivtv.xml: